# line-notify

./: .enc.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: 01-1_lunch_ask.yaml.bak  01-2_lunch_order.yaml  02-1_dinner_ask_family.yaml.bak  02-2_dinner_update_granny.yaml  build.yaml
cmd/: notify.go  root.go  test.go
family_alerts/: 00.0_morning_coffee.py  01.1_lunch_ask.py  01.2_lunch_order.py  02.1_dinner_ask_family.py  02.2_dinner_update_granny.py
family_alerts/utils/: message.py
line_notify/: main.py
